<resources>
    <string name="app_name">Decked</string>
    <string name="action_settings">Settings</string>
    <string name="PurpleCardName">Purple Card</string>
    <string name="CardDropPoint">CardDrop</string>
    <string name="First_Deal_Pile">firstDealPile</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="settings_header">Settings</string>
    <string name="shuffle_header">Shuffle</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="name">Set your preferred name</string>
    <string name="card_color">Set preferred card color</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_configuration">Set Up Your Game</string>
    <string name="title_home">Host Game</string>
    <string name="title_dashboard">Join Game</string>
    <string name="title_notifications">Start Game</string>
    <string name="game_code">Game Code</string>
    <string name="join_game">Join Game</string>
    <string name="total_players">Total Players</string>
    <string name="number_of_decks">Number of Decks</string>
    <string name="title_activity_game_configuration">Settings</string>
    <string name="title_activity_player_names">PlayerNames</string>
    <string name="title_activity_start_screen">StartScreenActivity</string>
    <string name="number_of_piles">Number of Piles</string>
    <string name="press_to_add_circle">Press to add Circle</string>
    <string name="press_to_remove_circle">Press to remove circle</string>
    <string name="solo_game">Solo Game</string>
    <string name="ip_address_of_host">IP Address of Host</string>
</resources>
