<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".StartScreenActivity"
        tools:showIn="@layout/activity_start_screen">

    <Button
            android:id="@+id/soloPlay"
            android:layout_width="239dp"
            android:layout_height="81dp"
            android:layout_marginEnd="87dp"
            android:layout_marginRight="87dp"
            android:layout_marginBottom="90dp"
            android:background="#401976D2"
            android:text="@string/solo_game"
            android:textColor="#1976D2"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <Button
            android:id="@+id/hostGameButton"
            android:layout_width="239dp"
            android:layout_height="81dp"
            android:layout_marginEnd="87dp"
            android:layout_marginRight="87dp"
            android:layout_marginBottom="50dp"
            android:background="#401976D2"
            android:text="@string/title_home"
            android:textColor="#1976D2"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/joinGameButton"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/appTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="86dp"
            android:layout_marginRight="86dp"
            android:layout_marginBottom="50dp"
            android:text="@string/app_name"
            android:textColor="#1976D2"
            android:textSize="72sp"
            app:layout_constraintBottom_toTopOf="@+id/hostGameButton"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/app_name" />

    <Button
            android:id="@+id/joinGameButton"
            android:layout_width="239dp"
            android:layout_height="81dp"
            android:layout_marginEnd="87dp"
            android:layout_marginRight="87dp"
            android:layout_marginBottom="50dp"
            android:background="#401976D2"
            android:text="@string/join_game"
            android:textColor="#1976D2"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/soloPlay"
            app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>