<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".JoinGameActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/goToLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="#388E3C"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_media_play" />

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="365dp"
            android:layout_height="61dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="380dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameText"
                android:layout_width="365dp"
                android:layout_height="45dp"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:textColor="#1976D2" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/joinGameText"
            android:layout_width="365dp"
            android:layout_height="63dp"
            android:layout_marginStart="23dp"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="102dp"
            android:layout_marginEnd="23dp"
            android:layout_marginRight="23dp"
            android:layout_marginBottom="50dp"
            android:gravity="center_horizontal"
            android:text="@string/join_game"
            android:textColor="#1976D2"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/gameCodeText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/gameCodeText"
            android:layout_width="365dp"
            android:layout_height="52dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="114dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="400dp"
            android:ems="10"
            android:hint="@string/game_code"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/joinGameText" />

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="365dp"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="29dp"
            app:layout_constraintBottom_toTopOf="@+id/gameCodeText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ipAddressText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ip_address_of_host" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>